NordnetAdapter versioning, Spring Boot ver. 3.3.0